--- a/YorkieEngine.vcxproj.filters
+++ b/YorkieEngine.vcxproj.filters
@@ -51,10 +51,10 @@
     <ClCompile Include="YorkieEngine\Application\YorkiEngineApp.cpp">
       <Filter>Source\Application\Private</Filter>
     </ClCompile>
-    <ClCompile Include="YorkieEngine\IndexBuffer.cpp">
+    <ClCompile Include="YorkieEngine\Rendering\Buffers\IndexBuffer.cpp">
       <Filter>Source\Rendering\Private</Filter>
     </ClCompile>
-    <ClCompile Include="YorkieEngine\Buffer.cpp">
+    <ClCompile Include="YorkieEngine\Rendering\Buffers\Buffer.cpp">
       <Filter>Source\Rendering\Private</Filter>
     </ClCompile>
     <ClCompile Include="YorkieEngine\Window\Private\Window.cpp" />
@@ -72,6 +72,8 @@
     <ClCompile Include="YorkieEngine\Math\Mat4x4 .cpp" />
     <ClCompile Include="YorkieEngine\Math\Vector3D.cpp" />
     <ClCompile Include="YorkieEngine\Math\MathHelpers .cpp" />
+    <ClCompile Include="YorkieEngine\Rendering\Buffers\VBO.cpp" />
+    <ClCompile Include="YorkieEngine\Rendering\Buffers\VAO.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="YorkieEngine\YorkieEngine.h">
@@ -89,10 +91,10 @@
     <ClInclude Include="YorkieEngine\Application\YorkiEngineApp.h">
       <Filter>Source\Application\Public</Filter>
     </ClInclude>
-    <ClInclude Include="YorkieEngine\Buffer.h">
+    <ClInclude Include="YorkieEngine\Rendering\Buffers\Buffer.h">
       <Filter>Source\Rendering\Public</Filter>
     </ClInclude>
-    <ClInclude Include="YorkieEngine\IndexBuffer.h">
+    <ClInclude Include="YorkieEngine\Rendering\Buffers\IndexBuffer.h">
       <Filter>Source\Rendering\Public</Filter>
     </ClInclude>
     <ClInclude Include="YorkieEngine\Window\Public\Window.h" />
@@ -112,5 +114,7 @@
     <ClInclude Include="YorkieEngine\Math\Mat4x4.h" />
     <ClInclude Include="YorkieEngine\Math\Vector3D.h" />
     <ClInclude Include="YorkieEngine\Math\MathHelpers.h" />
+    <ClInclude Include="YorkieEngine\Rendering\Buffers\VBO.h" />
+    <ClInclude Include="YorkieEngine\Rendering\Buffers\VAO.h" />
   </ItemGroup>
 </Project>
