--- a/YorkieEngine.vcxproj.filters
+++ b/YorkieEngine.vcxproj.filters
@@ -75,6 +75,7 @@
     <ClCompile Include="YorkieEngine\Rendering\Buffers\VBO.cpp" />
     <ClCompile Include="YorkieEngine\Rendering\Buffers\VAO.cpp" />
     <ClCompile Include="YorkieEngine\Rendering\Primitives\Cube.cpp" />
+    <ClCompile Include="YorkieEngine\Modules\ShaderModule.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="YorkieEngine\YorkieEngine.h">
@@ -118,6 +119,7 @@
     <ClInclude Include="YorkieEngine\Rendering\Buffers\VBO.h" />
     <ClInclude Include="YorkieEngine\Rendering\Buffers\VAO.h" />
     <ClInclude Include="YorkieEngine\Rendering\Primitives\Cube.h" />
+    <ClInclude Include="YorkieEngine\Modules\ShaderModule.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shaders\Cube.shader" />
