--- a/YorkieEngine.vcxproj
+++ b/YorkieEngine.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="YorkieEngine\Ligthing\BasicLight.cpp" />
     <ClCompile Include="Libraries\glad\src\glad.c" />
     <ClCompile Include="YorkieEngine\Modules\ShaderModule.cpp" />
     <ClCompile Include="YorkieEngine\Rendering\Buffers\VAO.cpp" />
@@ -48,6 +49,7 @@
     <ClCompile Include="YorkieEngine\YorkieEngine.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="YorkieEngine\Ligthing\BasicLight.h" />
     <ClInclude Include="YorkieEngine\Modules\ShaderModule.h" />
     <ClInclude Include="YorkieEngine\Rendering\Buffers\VAO.h" />
     <ClInclude Include="YorkieEngine\Application\YorkiEngineApp.h" />
