--- a/YorkieEngine.vcxproj.filters
+++ b/YorkieEngine.vcxproj.filters
@@ -76,6 +76,7 @@
     <ClCompile Include="YorkieEngine\Rendering\Buffers\VAO.cpp" />
     <ClCompile Include="YorkieEngine\Rendering\Primitives\Cube.cpp" />
     <ClCompile Include="YorkieEngine\Modules\ShaderModule.cpp" />
+    <ClCompile Include="YorkieEngine\Ligthing\BasicLight.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="YorkieEngine\YorkieEngine.h">
@@ -120,6 +121,7 @@
     <ClInclude Include="YorkieEngine\Rendering\Buffers\VAO.h" />
     <ClInclude Include="YorkieEngine\Rendering\Primitives\Cube.h" />
     <ClInclude Include="YorkieEngine\Modules\ShaderModule.h" />
+    <ClInclude Include="YorkieEngine\Ligthing\BasicLight.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="res\shaders\Cube.shader" />
