Texture Material and Shader coded oredered. Also render changed. Not working for now, there is some issue with the .shader file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,20 +24,21 @@ add_library(YorkieEngine SHARED ${SOURCES} ${HEADERS})
 target_include_directories(YorkieEngine 
     PUBLIC 
     ${CMAKE_CURRENT_SOURCE_DIR}/YorkieEngine/include
-    ${CMAKE_CURRENT_SOURCE_DIR}/Libraries/glad/include
-    ${CMAKE_CURRENT_SOURCE_DIR}/Libraries/entt/src
-    ${CMAKE_CURRENT_SOURCE_DIR}/Libraries/glm
-    ${CMAKE_CURRENT_SOURCE_DIR}/Libraries/glfw/include															
+    ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/glad/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/entt/src
+    ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/glm
+    ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/glfw/include			
+    ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/stb
 )
 
 # Link your game engine target with GLFW
-target_link_libraries(YorkieEngine ${CMAKE_CURRENT_SOURCE_DIR}/Libraries/glfw/lib/glfw3.lib)
+target_link_libraries(YorkieEngine ${CMAKE_CURRENT_SOURCE_DIR}/Dependencies/glfw/lib/glfw3.lib)
 
 # Find and link OpenGL
 find_package(OpenGL REQUIRED)
 target_link_libraries(YorkieEngine OpenGL::GL)
 
-target_compile_definitions(YorkieEngine PRIVATE YENGINE_EXPORT)
+target_compile_definitions(YorkieEngine PRIVATE YENGINE_EXPORT STB_IMAGE_IMPLEMENTATION)
 
 # Add a custom command to copy the GLFW DLL to the binary directory
 add_custom_command(TARGET YorkieEngine POST_BUILD
