--- a/YorkieEngine.vcxproj
+++ b/YorkieEngine.vcxproj
@@ -71,7 +71,7 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>E:\Projects\YorkieEngine\YorkieEngine\include;E:\Projects\YorkieEngine\Dependencies\glad\include;E:\Projects\YorkieEngine\Dependencies\entt\src;E:\Projects\YorkieEngine\Dependencies\glm;E:\Projects\YorkieEngine\Dependencies\glfw\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\Projects\YorkieEngine\YorkieEngine\include;E:\Projects\YorkieEngine\Dependencies\glad\include;E:\Projects\YorkieEngine\Dependencies\entt\src;E:\Projects\YorkieEngine\Dependencies\glm;E:\Projects\YorkieEngine\Dependencies\glfw\include;E:\Projects\YorkieEngine\Dependencies\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AssemblerListingLocation>$(IntDir)</AssemblerListingLocation>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
@@ -84,15 +84,15 @@
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <UseFullPaths>false</UseFullPaths>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>%(PreprocessorDefinitions);WIN32;_WINDOWS;YENGINE_EXPORT;CMAKE_INTDIR="Debug";YorkieEngine_EXPORTS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>%(PreprocessorDefinitions);WIN32;_WINDOWS;YENGINE_EXPORT;STB_IMAGE_IMPLEMENTATION;CMAKE_INTDIR="Debug";YorkieEngine_EXPORTS</PreprocessorDefinitions>
       <ObjectFileName>$(IntDir)</ObjectFileName>
     </ClCompile>
     <ResourceCompile>
-      <PreprocessorDefinitions>%(PreprocessorDefinitions);WIN32;_DEBUG;_WINDOWS;YENGINE_EXPORT;CMAKE_INTDIR=\"Debug\";YorkieEngine_EXPORTS</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>E:\Projects\YorkieEngine\YorkieEngine\include;E:\Projects\YorkieEngine\Dependencies\glad\include;E:\Projects\YorkieEngine\Dependencies\entt\src;E:\Projects\YorkieEngine\Dependencies\glm;E:\Projects\YorkieEngine\Dependencies\glfw\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>%(PreprocessorDefinitions);WIN32;_DEBUG;_WINDOWS;YENGINE_EXPORT;STB_IMAGE_IMPLEMENTATION;CMAKE_INTDIR=\"Debug\";YorkieEngine_EXPORTS</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>E:\Projects\YorkieEngine\YorkieEngine\include;E:\Projects\YorkieEngine\Dependencies\glad\include;E:\Projects\YorkieEngine\Dependencies\entt\src;E:\Projects\YorkieEngine\Dependencies\glm;E:\Projects\YorkieEngine\Dependencies\glfw\include;E:\Projects\YorkieEngine\Dependencies\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>E:\Projects\YorkieEngine\YorkieEngine\include;E:\Projects\YorkieEngine\Dependencies\glad\include;E:\Projects\YorkieEngine\Dependencies\entt\src;E:\Projects\YorkieEngine\Dependencies\glm;E:\Projects\YorkieEngine\Dependencies\glfw\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\Projects\YorkieEngine\YorkieEngine\include;E:\Projects\YorkieEngine\Dependencies\glad\include;E:\Projects\YorkieEngine\Dependencies\entt\src;E:\Projects\YorkieEngine\Dependencies\glm;E:\Projects\YorkieEngine\Dependencies\glfw\include;E:\Projects\YorkieEngine\Dependencies\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(ProjectDir)/$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -129,7 +129,7 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>E:\Projects\YorkieEngine\YorkieEngine\include;E:\Projects\YorkieEngine\Dependencies\glad\include;E:\Projects\YorkieEngine\Dependencies\entt\src;E:\Projects\YorkieEngine\Dependencies\glm;E:\Projects\YorkieEngine\Dependencies\glfw\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\Projects\YorkieEngine\YorkieEngine\include;E:\Projects\YorkieEngine\Dependencies\glad\include;E:\Projects\YorkieEngine\Dependencies\entt\src;E:\Projects\YorkieEngine\Dependencies\glm;E:\Projects\YorkieEngine\Dependencies\glfw\include;E:\Projects\YorkieEngine\Dependencies\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AssemblerListingLocation>$(IntDir)</AssemblerListingLocation>
       <ExceptionHandling>Sync</ExceptionHandling>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
@@ -140,17 +140,17 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <UseFullPaths>false</UseFullPaths>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>%(PreprocessorDefinitions);WIN32;_WINDOWS;NDEBUG;YENGINE_EXPORT;CMAKE_INTDIR="Release";YorkieEngine_EXPORTS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>%(PreprocessorDefinitions);WIN32;_WINDOWS;NDEBUG;YENGINE_EXPORT;STB_IMAGE_IMPLEMENTATION;CMAKE_INTDIR="Release";YorkieEngine_EXPORTS</PreprocessorDefinitions>
       <ObjectFileName>$(IntDir)</ObjectFileName>
       <DebugInformationFormat>
       </DebugInformationFormat>
     </ClCompile>
     <ResourceCompile>
-      <PreprocessorDefinitions>%(PreprocessorDefinitions);WIN32;_WINDOWS;NDEBUG;YENGINE_EXPORT;CMAKE_INTDIR=\"Release\";YorkieEngine_EXPORTS</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>E:\Projects\YorkieEngine\YorkieEngine\include;E:\Projects\YorkieEngine\Dependencies\glad\include;E:\Projects\YorkieEngine\Dependencies\entt\src;E:\Projects\YorkieEngine\Dependencies\glm;E:\Projects\YorkieEngine\Dependencies\glfw\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>%(PreprocessorDefinitions);WIN32;_WINDOWS;NDEBUG;YENGINE_EXPORT;STB_IMAGE_IMPLEMENTATION;CMAKE_INTDIR=\"Release\";YorkieEngine_EXPORTS</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>E:\Projects\YorkieEngine\YorkieEngine\include;E:\Projects\YorkieEngine\Dependencies\glad\include;E:\Projects\YorkieEngine\Dependencies\entt\src;E:\Projects\YorkieEngine\Dependencies\glm;E:\Projects\YorkieEngine\Dependencies\glfw\include;E:\Projects\YorkieEngine\Dependencies\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>E:\Projects\YorkieEngine\YorkieEngine\include;E:\Projects\YorkieEngine\Dependencies\glad\include;E:\Projects\YorkieEngine\Dependencies\entt\src;E:\Projects\YorkieEngine\Dependencies\glm;E:\Projects\YorkieEngine\Dependencies\glfw\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\Projects\YorkieEngine\YorkieEngine\include;E:\Projects\YorkieEngine\Dependencies\glad\include;E:\Projects\YorkieEngine\Dependencies\entt\src;E:\Projects\YorkieEngine\Dependencies\glm;E:\Projects\YorkieEngine\Dependencies\glfw\include;E:\Projects\YorkieEngine\Dependencies\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(ProjectDir)/$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -187,7 +187,7 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Custom|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>E:\Projects\YorkieEngine\YorkieEngine\include;E:\Projects\YorkieEngine\Dependencies\glad\include;E:\Projects\YorkieEngine\Dependencies\entt\src;E:\Projects\YorkieEngine\Dependencies\glm;E:\Projects\YorkieEngine\Dependencies\glfw\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\Projects\YorkieEngine\YorkieEngine\include;E:\Projects\YorkieEngine\Dependencies\glad\include;E:\Projects\YorkieEngine\Dependencies\entt\src;E:\Projects\YorkieEngine\Dependencies\glm;E:\Projects\YorkieEngine\Dependencies\glfw\include;E:\Projects\YorkieEngine\Dependencies\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <AssemblerListingLocation>$(IntDir)</AssemblerListingLocation>
       <ExceptionHandling>Sync</ExceptionHandling>
       <LanguageStandard>stdcpp17</LanguageStandard>
@@ -195,17 +195,17 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
       <UseFullPaths>false</UseFullPaths>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>%(PreprocessorDefinitions);WIN32;_WINDOWS;YENGINE_EXPORT;CMAKE_INTDIR="Custom";YorkieEngine_EXPORTS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>%(PreprocessorDefinitions);WIN32;_WINDOWS;YENGINE_EXPORT;STB_IMAGE_IMPLEMENTATION;CMAKE_INTDIR="Custom";YorkieEngine_EXPORTS</PreprocessorDefinitions>
       <ObjectFileName>$(IntDir)</ObjectFileName>
       <DebugInformationFormat>
       </DebugInformationFormat>
     </ClCompile>
     <ResourceCompile>
-      <PreprocessorDefinitions>%(PreprocessorDefinitions);WIN32;_WINDOWS;YENGINE_EXPORT;CMAKE_INTDIR=\"Custom\";YorkieEngine_EXPORTS</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>E:\Projects\YorkieEngine\YorkieEngine\include;E:\Projects\YorkieEngine\Dependencies\glad\include;E:\Projects\YorkieEngine\Dependencies\entt\src;E:\Projects\YorkieEngine\Dependencies\glm;E:\Projects\YorkieEngine\Dependencies\glfw\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>%(PreprocessorDefinitions);WIN32;_WINDOWS;YENGINE_EXPORT;STB_IMAGE_IMPLEMENTATION;CMAKE_INTDIR=\"Custom\";YorkieEngine_EXPORTS</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>E:\Projects\YorkieEngine\YorkieEngine\include;E:\Projects\YorkieEngine\Dependencies\glad\include;E:\Projects\YorkieEngine\Dependencies\entt\src;E:\Projects\YorkieEngine\Dependencies\glm;E:\Projects\YorkieEngine\Dependencies\glfw\include;E:\Projects\YorkieEngine\Dependencies\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ResourceCompile>
     <Midl>
-      <AdditionalIncludeDirectories>E:\Projects\YorkieEngine\YorkieEngine\include;E:\Projects\YorkieEngine\Dependencies\glad\include;E:\Projects\YorkieEngine\Dependencies\entt\src;E:\Projects\YorkieEngine\Dependencies\glm;E:\Projects\YorkieEngine\Dependencies\glfw\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\Projects\YorkieEngine\YorkieEngine\include;E:\Projects\YorkieEngine\Dependencies\glad\include;E:\Projects\YorkieEngine\Dependencies\entt\src;E:\Projects\YorkieEngine\Dependencies\glm;E:\Projects\YorkieEngine\Dependencies\glfw\include;E:\Projects\YorkieEngine\Dependencies\stb;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <OutputDirectory>$(ProjectDir)/$(IntDir)</OutputDirectory>
       <HeaderFileName>%(Filename).h</HeaderFileName>
       <TypeLibraryName>%(Filename).tlb</TypeLibraryName>
@@ -287,7 +287,9 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
   <ItemGroup>
     <ClCompile Include="E:\Projects\YorkieEngine\YorkieEngine\src\Camera\Camera.cpp" />
     <ClCompile Include="E:\Projects\YorkieEngine\YorkieEngine\src\Components\BaseComponent.cpp" />
+    <ClCompile Include="E:\Projects\YorkieEngine\YorkieEngine\src\Components\Grid.cpp" />
     <ClCompile Include="E:\Projects\YorkieEngine\YorkieEngine\src\Components\MeshComponent.cpp" />
+    <ClCompile Include="E:\Projects\YorkieEngine\YorkieEngine\src\Components\TextureComponent.cpp" />
     <ClCompile Include="E:\Projects\YorkieEngine\YorkieEngine\src\Components\TransformComponent.cpp" />
     <ClCompile Include="E:\Projects\YorkieEngine\YorkieEngine\src\Engine\Event.cpp" />
     <ClCompile Include="E:\Projects\YorkieEngine\YorkieEngine\src\Engine\YorkiEngineApp.cpp" />
@@ -320,10 +322,17 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     <ClCompile Include="E:\Projects\YorkieEngine\YorkieEngine\src\Window\Window.cpp" />
     <ClCompile Include="E:\Projects\YorkieEngine\YorkieEngine\src\Window\WindowManager.cpp" />
     <ClCompile Include="E:\Projects\YorkieEngine\YorkieEngine\src\glad.cpp" />
+    <ClCompile Include="YorkieEngine\include\Graphics\Texture\PickingTexture.cpp" />
+    <ClCompile Include="YorkieEngine\src\Game\Lights\BaseLight.cpp" />
+    <ClCompile Include="YorkieEngine\src\Game\Lights\DirectionalLight.cpp" />
+    <ClCompile Include="YorkieEngine\src\Graphics\Materials\Material.cpp" />
+    <ClCompile Include="YorkieEngine\src\Graphics\Texture\Texture.cpp" />
     <ClInclude Include="E:\Projects\YorkieEngine\YorkieEngine\include\Camera\Camera.h" />
     <ClInclude Include="E:\Projects\YorkieEngine\YorkieEngine\include\Components\BaseComponent.h" />
     <ClInclude Include="E:\Projects\YorkieEngine\YorkieEngine\include\Components\MeshComponent.h" />
+    <ClInclude Include="E:\Projects\YorkieEngine\YorkieEngine\include\Components\TextureComponent.h" />
     <ClInclude Include="E:\Projects\YorkieEngine\YorkieEngine\include\Components\TransformComponent.h" />
+    <ClInclude Include="E:\Projects\YorkieEngine\YorkieEngine\include\Editor\Grid.h" />
     <ClInclude Include="E:\Projects\YorkieEngine\YorkieEngine\include\Engine\Event.h" />
     <ClInclude Include="E:\Projects\YorkieEngine\YorkieEngine\include\Engine\YorkiEngineApp.h" />
     <ClInclude Include="E:\Projects\YorkieEngine\YorkieEngine\include\Engine\YorkieEngine.h" />
@@ -356,6 +365,11 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     <ClInclude Include="E:\Projects\YorkieEngine\YorkieEngine\include\Window\Viewport.h" />
     <ClInclude Include="E:\Projects\YorkieEngine\YorkieEngine\include\Window\Window.h" />
     <ClInclude Include="E:\Projects\YorkieEngine\YorkieEngine\include\Window\WindowManager.h" />
+    <ClInclude Include="YorkieEngine\include\Game\Lights\BaseLight.h" />
+    <ClInclude Include="YorkieEngine\include\Game\Lights\DirectionalLight.h" />
+    <ClInclude Include="YorkieEngine\include\Graphics\Materials\Material.h" />
+    <ClInclude Include="YorkieEngine\include\Graphics\Texture\PickingTexture.h" />
+    <ClInclude Include="YorkieEngine\include\Graphics\Texture\Texture.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="E:\Projects\YorkieEngine\ZERO_CHECK.vcxproj">
